base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vprofile
  labels:
    app.kubernetes.io/part-of: vprofile
    vprofile.io/monitoring: enabled
